--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
-
+  <script type="text/javascript" src="lib/cannon.min.js"></script>
   <script type="text/javascript" src="lib/babylon.js"></script>
-  <script type="text/javascript" src="lib/oimo.min.js"></script>
+  <!-- <script type="text/javascript" src="lib/oimo.min.js"></script> -->
   <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
